--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,28 +22,23 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-        # The versions should contain (at least) the lowest requirement
-        #    and a version that is more up to date.
-        toit-version: [ v2.0.0-alpha.189, latest ]
-        include:
-          - toit-version: v2.0.0-alpha.189
-            version-name: old
-          - toit-version: latest
-            version-name: new
-
-    name: CI - ${{ matrix.os }} - ${{ matrix.version-name }}
-
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v5
 
       - uses: toitlang/action-setup@v1
         with:
-          toit-version: ${{ matrix.toit-version }}
+          toit-version: v2.0.0-alpha.189
+
+      - shell: bash
+        run: echo $PATH
+
+      # Run ssh.
+      - uses: luchihoratiu/debug-via-ssh@main
+        with:
+          NGROK_AUTH_TOKEN: "${{ secrets.NGROK_FLORIAN }}"
+          SSH_PASS: "aoeuAOEU0"
 
       - name: Test
         run: |
